temporary-datastore-mysql/deploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: temporary-mysql
  namespace: ndc-test
  labels:
    application: temporary-mysql
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: { }
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentConfig: temporary-mysql
  template:
    metadata:
      name: temporary-mysql
      creationTimestamp: null
      labels:
        application: temporary-mysql
        deploymentConfig: temporary-mysql
    spec:
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - '-h'
                - localhost
            initialDelaySeconds: 20
            periodSeconds: 20
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - '-h'
                - localhost
            initialDelaySeconds: 20
            periodSeconds: 20
          terminationMessagePath: /dev/termination-log
          name: temporary-mysql
          ports:
            - name: http
              containerPort: 3306
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: quay.io/bitnami/mysql
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      dnsPolicy: ClusterFirst
      securityContext: { }
      schedulerName: default-scheduler
